Improvements refs #21273 - member search improvements. Breadcum its dinamically loaded

--- a/app/views/layouts/2-cols.html.erb
+++ b/app/views/layouts/2-cols.html.erb
@@ -11,6 +11,7 @@
 
     <div class="container">
       <div class="content">
+        <%= render :partial => 'shared/breadcrumb' %>
         <div class="row">
           <div class="span9">
             <%= yield %>
