--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
       <div class="content">
         <div class="row">
           <div class="span12">
+            <%= render :partial => 'shared/breadcrumb' %>
+
             <%= yield %>
           </div>
         </div><!--/row-->
