--- a/app/views/members/add_club_cash.html.erb
+++ b/app/views/members/add_club_cash.html.erb
@@ -26,7 +26,7 @@
 
 
 <script>
-  var visible_id = <%= @current_member.visible_id %>; 
-  var club_id = <%= @current_club.id %>
+  var member_id = "<%= @current_member.id %>"; 
+  var visible_id = "<%= @current_member.visible_id %>"; 
   $(document).ready(club_cash_functions())
 </script>
