--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,6 +1,7 @@
 <%= render :partial => "shared/member_information" %>
 
 <script> 
+  var v_id = <%= @current_member.visible_id %>; 
   var id = "<%= @current_member.id %>"; 
 </script> 
 
