changes in member show design

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -27,3 +27,21 @@ body { padding-top: 60px; }
 //
 // Example:
 // @linkColor: #ff0000;
+
+
+//.table tbody tr:hover td, .table tbody tr:hover th {
+//	background-color: inherit;
+//}
+
+.nav {
+    list-style: none outside none;
+    margin-bottom: 0;
+    margin-left: 0;
+}
+
+.tab-content {
+	border: 1px solid #ddd;
+  border-top: 0;
+	padding: 1%;
+  width: 98%;
+}
