--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,6 @@ form .clearfix:before, form .clearfix:after {
 }
 
 .card_expired{
-	color: #FFFFFF;
 	background-color: red;
 }
 
@@ -40,6 +39,11 @@ form .clearfix:before, form .clearfix:after {
 .blacklisted{
 	background-color: #EEE8CD;
 }
+
+.ligthgrey{
+	background-color: #F5F5F5;
+}
+
 
 .help {position: relative}​ /*Without this the popover won't work.*/
 
@@ -90,15 +94,24 @@ div.dataTables_filter input {
 	margin-top: -25px;
 }
 
-.span_box {
-	border: 1px solid #60A4CB;
-	padding: 5px;
-}
-
-.span_box_title {
+.box_title {
 	background-color: #B0D3E6;
 }
 
 .datepicker_for_search {
 	width: 120px;
 }
+
+.btn-large-w {
+	width: 140px;	
+}
+
+.hidden_table_border, .hidden_table_border th, .hidden_table_border td   {
+	border-style: hidden;
+}
+
+
+.tab_body_content {
+  padding: 1%;
+ }
+
