--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,20 +23,35 @@
               <% end %>
             <% end %>
 
+
+
+          <ul class="nav pull-right">
+            <li class="divider-vertical"></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_agent.username %><b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to t('menu.logout'), destroy_agent_session_path, :method => :delete  %></li>
+              </ul>
+            </li>
+          </ul>
+
+
           <ul class="nav">
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
             <li><%= link_to t('menu.agents'), admin_agents_path  %></li>
             <li><%= link_to t('menu.partners'), admin_partners_path  %></li>
-            <li><%= link_to t('menu.logout'), destroy_agent_session_path, :method => :delete  %></li>
             <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
             <li>
               <% selected = @current_club ? [ members_path(@current_club.partner.prefix, @current_club.name) ] : nil %>
               <%= select_tag "change_partner",
                 options_for_select(Club.all.collect{ |u| [ "#{u.partner.prefix} - #{u.name}", members_path(u.partner.prefix, u.name) ]}, 
                   selected ), 
-                :onchange => "window.open(this.options[this.selectedIndex].value, '_top')" %>
+                :onchange => "window.open(this.options[this.selectedIndex].value, '_top')", :style => "margin-top: 5px;" %>
             </li>
           </ul>
+
+
+
         </div><!--/.nav-collapse -->
       <% end %>           
     </div>
