--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -27,15 +27,19 @@
       <td> <%= cc.expire_month %> / <%= cc.expire_year %> </td>
       <td> <%= I18n.l cc.last_successful_bill_date, :format => :long if !cc.last_successful_bill_date.nil? %> </td>
       <td>
-        <%= form_for @cc, :as => :credit_card, :url => credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), do |f|  %> 
-          <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" unless @current_member.lapsed? || cc.blacklisted %>
-          <% t('activerecord.attributes.credit_card.blacklisted') if cc.blacklisted%>
-        <% end %>
+        <% t('activerecord.attributes.credit_card.blacklisted') if cc.blacklisted%>
+        <% if cc.can_be_blacklisted? %>
+          <%= form_for @cc, :as => :credit_card, :url => credit_card_set_as_blacklisted_path(:credit_card_id => cc.id), do |f|  %> 
+            <%= submit_tag 'BlackList', :name => 'blacklist', :class=> "btn btn-warning confirm" %>
+          <% end %>
+        <% end %> 
       </td>
       <td>
-        <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
-          <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" unless cc.active || @current_member.lapsed? || cc.blacklisted %>
-          <%= t('activerecord.atributes.credit_card.active') if cc.active %>
+        <%= t('activerecord.atributes.credit_card.active') if cc.active %>
+        <% if cc.can_be_activated? %>
+          <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
+            <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" %>
+          <% end %>
         <% end %>
       </td>
     </tr>
