--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -170,13 +170,12 @@
         <% end %>
       </td>
     </tr>
-    <% unless @current_member.lapsed? %>
     <tr>
       <td colspan="2">
         <div style="float: right;"><%= link_to " Add a credit card", new_credit_card_path, :class => "btn btn-success icon-plus" %></div>
       </td>
     </tr>
-    <% end %>
+  </tbody>
 </table>
 
 
@@ -244,8 +243,6 @@
     </tr>
   </tbody>
 </table>
-
-
 
 <ul class="nav nav-tabs">
   <li class="active"><a href="#operations" data-toggle="tab">Operations</a></li>
