breadcum fixed. link to club

--- a/app/views/shared/_breadcrumb.html.erb
+++ b/app/views/shared/_breadcrumb.html.erb
@@ -16,7 +16,7 @@
         Club<span class="divider">/</span>
       </li>
       <li>
-        <a href="<%= clubs_path(@current_club.name) %>"><%= @current_club.name %></a><span class="divider">/</span>
+        <a href="<%= clubs_path %>"><%= @current_club.name %></a><span class="divider">/</span>
       </li>
       <% if params[:controller] == 'members' and params[:action] == 'index' %>
         <li class="active">Search</li>
@@ -24,6 +24,9 @@
     <% end %>
     <% if @current_member %>
       <li class="active">Member</li>
+    <% end %>
+    <% if params[:controller].include?('member_notes') %>
+      <span class="divider">/</span><li class="active">Notes</li>
     <% end %>
   </ul>
 <% end %>
