--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -4,7 +4,7 @@
   <div class="page-header">
     <h1>Search</h1>
     <% if can? :enroll_member, @current_agent %>
-      <%= link_to 'New Member', new_member_path, :class => "btn btn-primary icon-user btn_on_header" %>
+      <%= link_to ' New Member', new_member_path, :class => "btn btn-primary icon-plus btn_on_header" %>
     <% end %>
   </div>
  
