--- a/app/views/admin/partners/index.html.erb
+++ b/app/views/admin/partners/index.html.erb
@@ -1,5 +1,7 @@
 <%- model_class = Partner.new.class -%>
 
+<%= render :partial => 'shared/page_header', :locals => { :title_text => t('.title'),:new_path => new_admin_partner_path} %>
+
 <table id="partners_table" class="display" data-source="<%= admin_partners_url(format: "json") %>">
   <thead>
     <tr>
@@ -12,11 +14,6 @@
   <tbody>
   </tbody>
 </table>
-
-<%= link_to t(:new),
-            new_admin_partner_path,
-            :class => 'btn btn-primary' %>
-
 
 <script>
   $(document).ready(partner_index_functions(<%= Partner.datatable_columns.size %>));
