--- a/app/views/shared/_member_information.html.erb
+++ b/app/views/shared/_member_information.html.erb
@@ -1,1 +1,5 @@
-<h1> <%= params[:controller].humanize %>: <%= params[:action].humanize unless params[:action] == 'show' %> <%= @current_member.visible_id %> - <%= @current_member.first_name %> <%= @current_member.last_name %> </h1>
+<h1> <%= params[:controller].humanize %>: <%= params[:action].humanize unless params[:action] == 'show' %> <%= @current_member.visible_id %> - <%= @current_member.first_name %> <%= @current_member.last_name %>
+	<% if @current_member.blacklisted? %>
+  &nbsp;<small>Blacklisted! </small>
+  <% end %>
+</h1>
