--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -35,7 +35,7 @@
         <% end %> 
       </td>
       <td>
-        <%= t('activerecord.atributes.credit_card.active') if cc.active %>
+        <%= t('activerecord.attributes.credit_card.active') if cc.active %>
         <% if cc.can_be_activated? %>
           <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
             <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" %>
