general changes in the design

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,8 +110,11 @@ div.dataTables_filter input {
 	border-style: hidden;
 }
 
-
 .tab_body_content {
   padding: 1%;
  }
+
+.tab_body_padding {
+	padding: 9px;	
+}
 
