--- a/app/assets/stylesheets/theme2/override.css
+++ b/app/assets/stylesheets/theme2/override.css
@@ -1,22 +1,17 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require scaffolds
- *= require bootstrap_and_overrides
- *= require jquery.ui.core
- *= require jquery.ui.theme
- *= require dataTables/jquery.dataTables.bootstrap
- *= require dataTables/src/demo_table_jui
-*/
+/* bootstrap override */
+.nav {
+    list-style: none outside none;
+    margin-bottom: 0;
+    margin-left: 0;
+}
 
+.tab-content {
+  border: 1px solid #ddd;
+  border-top: 0;
+  padding: 1%;
+  width: 98%;
+}
+/* end bootstrap override */
 
 form .clearfix:before, form .clearfix:after {
   display: inline;
