adding new theme and theme switcher based on club

--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="control-group">
+    <%= f.label :description, :class => 'control-label' %>
+    <div class="controls">
+      <%= theme_switcher f %>
+    </div>
+  </div>
+  <div class="control-group">
     <%= f.label :logo, :class => 'control-label' %>
     <div class="controls">
       <%= f.file_field :logo, :class => 'text_field' %>
