--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -8,9 +8,11 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
 <![endif]-->
 
-<%#= stylesheet_link_tag "theme1", :media => "all" %>
-<%= stylesheet_link_tag "theme2", :media => "all" %>
-<%#= stylesheet_link_tag "application", :media => "all" %>
+<% if @current_club %>
+  <%= stylesheet_link_tag @current_club.theme, :media => "all" %>
+<% else %>
+  <%= stylesheet_link_tag "application", :media => "all" %>
+<% end %>
 
 <link href="/favicon.ico" rel="shortcut icon"/>
 
